# OpenCV-CMake-Template

./: CMakeLists.txt  README.md  build.bat  build_linux.sh  build_windows.bat
cmake/: ExternalLibraries.cmake
cmake/template/: template_library.cmake
src/: CMakeLists.txt  main.cpp
